# Créer un executable à partir de fichiers sources
add_executable(test_1  test_1.cxx)
add_executable(test_compStructures test_compStructures.cxx)
add_executable(gravSystem  gravSystem.cxx)
add_executable(test_universe_tp3_insertion test_universe_tp3_insertion.cxx)
add_executable(test_potentiel test_potentiel.cxx)
add_executable(test_universe_tp3 test_universe_tp3.cxx)
add_executable(test_application test_application.cxx)
add_executable(test_boundaries test_boundaries.cxx)
add_executable(test_interaction test_interaction.cxx)
add_executable(test_application_tp6 test_application_tp6.cxx)
add_executable(test_interaction3D test_interaction3D.cxx)

# Fait le lien avec la bibliothèque créée précedemment
# Les entêtes sont automatiquement détectés.
target_link_libraries(test_1 particules)
target_link_libraries(test_1 vecteur)
target_link_libraries(test_1 universe)
target_link_libraries(test_1 cell)

target_link_libraries(test_compStructures particules)
target_link_libraries(test_compStructures vecteur)
target_link_libraries(test_compStructures universe)
target_link_libraries(test_compStructures cell)

target_link_libraries(gravSystem particules)
target_link_libraries(gravSystem vecteur)
target_link_libraries(gravSystem universe)
target_link_libraries(gravSystem cell)

target_link_libraries(test_universe_tp3_insertion particules)
target_link_libraries(test_universe_tp3_insertion vecteur)
target_link_libraries(test_universe_tp3_insertion universe)
target_link_libraries(test_universe_tp3_insertion cell)

target_link_libraries(test_potentiel particules)
target_link_libraries(test_potentiel vecteur)
target_link_libraries(test_potentiel universe)
target_link_libraries(test_potentiel cell)


target_link_libraries(test_universe_tp3 particules)
target_link_libraries(test_universe_tp3 vecteur)
target_link_libraries(test_universe_tp3 universe)
target_link_libraries(test_universe_tp3 cell)

target_link_libraries(test_application particules)
target_link_libraries(test_application vecteur)
target_link_libraries(test_application universe)
target_link_libraries(test_application cell)

target_link_libraries(test_boundaries particules)
target_link_libraries(test_boundaries vecteur)
target_link_libraries(test_boundaries universe)
target_link_libraries(test_boundaries cell)

target_link_libraries(test_interaction particules)
target_link_libraries(test_interaction vecteur)
target_link_libraries(test_interaction universe)
target_link_libraries(test_interaction cell)

target_link_libraries(test_application_tp6 particules)
target_link_libraries(test_application_tp6 vecteur)
target_link_libraries(test_application_tp6 universe)
target_link_libraries(test_application_tp6 cell)

target_link_libraries(test_interaction3D particules)
target_link_libraries(test_interaction3D vecteur)
target_link_libraries(test_interaction3D universe)
target_link_libraries(test_interaction3D cell)
